RESOLVED FIXED219796
[LFC][IFC] InlineTextItem::isCollapsible might be misleading
https://bugs.webkit.org/show_bug.cgi?id=219796
Summary [LFC][IFC] InlineTextItem::isCollapsible might be misleading
alan
Reported 2020-12-11 11:48:16 PST
it maps to RenderStyle::collapseWhiteSpace which is also misleading a bit (1. tabs are not preserved, 2. subsequent whitespace content is collapsed)
Attachments
Patch (9.61 KB, patch)
2020-12-11 12:04 PST, alan
no flags
alan
Comment 1 2020-12-11 12:04:25 PST
EWS
Comment 2 2020-12-11 13:37:13 PST
Committed r270707: <https://trac.webkit.org/changeset/270707> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416027 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-11 13:38:25 PST
Note You need to log in before you can comment on or make changes to this bug.