[LFC][IFC] InlineTextItem::isCollapsible might be misleading https://bugs.webkit.org/show_bug.cgi?id=219796

Reviewed by Antti Koivisto.

This change makes the code more aligned with the spec language.
::isCollapsed (which maps to RenderStyle::collapseWhiteSpace) is not always about collapsing subsequent
whitespace content but also about preserving tab stops.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
* layout/inlineformatting/InlineLine.h:
(WebCore::Layout::Line::Run::trailingWhitespaceType const):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::inlineItemWidth const):
* layout/inlineformatting/InlineTextItem.cpp:
(WebCore::Layout::InlineTextItem::shouldPreserveSpacesAndTabs):
* layout/inlineformatting/InlineTextItem.h:
(WebCore::Layout::InlineTextItem::isWhitespace const):
(WebCore::Layout::InlineTextItem::InlineTextItem):
(WebCore::Layout::InlineTextItem::isCollapsible const): Deleted.
* layout/inlineformatting/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::width):


Canonical link: https://commits.webkit.org/232370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270707 268f45cc-cd09-0410-ab3c-d52691b4dbfc